--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,15 @@ vignettes/*.pdf
 
 # R Environment Variables
 .Renviron
+
+# Compiled .c or fortran object
+*.so 
+*.o
+*.dll
+
+
+# files generate by google drive
+*.ini
+
+# log file for R CMD check
+*.log
